syntax = "proto3";
package filedecompress;

// 服务定义
service FileDecompress {
    // Define your RPC methods here
    rpc MyMethod (MyRequest) returns (MyResponse);
}

// 请求消息
message MyRequest {
    string compress_file_path = 1;
    string decompress_file_path = 2;
}

// 响应消息
message MyResponse {
    // 接口状态码
    int32 status = 1;
    // 接口返回信息
    string message = 2;
}
